<resources>
    <string name="app_name">CalculatorMX</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEigth">8</string>
    <string name="numberNine">9</string>
    <string name="numberZero">0</string>
    <string name="Multiply">*</string>
    <string name="Add">+</string>
    <string name="Div">÷</string>
    <string name="Substract">-</string>
    <string name="Equals">=</string>
    <string name="Delete">C</string>
</resources>
