<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/apptitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            app:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/displayOperations"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/borde"
            android:gravity="end"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text=""
            android:textAlignment="viewEnd"
            android:textSize="35sp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonSeven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberSeven"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonEight"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberEigth"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonNine"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberNine"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Div"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonFour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberFour"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonFive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberFive"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonSix"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberSix"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Multiply"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonOne"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberOne"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberTwo"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonThree"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberThree"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonSubstract"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Substract"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Delete"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonZero"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/numberZero"
                    android:textColor="@color/colorTextNumbers"
                    android:textSize="25dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Equals"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/borde"
                    android:text="@string/Add"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="549dp" />
            </TableRow>

        </TableLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>